# beamS

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-14-beams-v0.2.md  2026-06-14-pharos-mvp.md
docs/superpowers/specs/: 2026-06-14-beam-localhost-tunnel-design.md  2026-06-14-pharos-localhost-tunnel-design.md
src/: binary.rs  cli.rs  error.rs  lib.rs  main.rs  output.rs  parser.rs  ready.rs  tunnel.rs
src/tunnel/: bore.rs  cloudflare.rs  localtunnel.rs  mod.rs
tests/: e2e.rs
